--- a/toolkits/global/packages/global-forms/view/globalFormFieldset.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormFieldset.hbs
@@ -1,4 +1,4 @@
-<fieldset class="c-forms__fieldset"{{#unless legend}} role="presentation"{{/unless}}>
+<fieldset class="c-forms__fieldset">
 	{{#if legend}}
 		<legend class="c-forms__legend">{{{legend}}}</legend>
 	{{/if}}
