simplification, spacing, smaller images

--- a/toolkits/springer/packages/springer-hero/demo/index.hbs
+++ b/toolkits/springer/packages/springer-hero/demo/index.hbs
@@ -1,14 +1,9 @@
 <h2>Default</h2>
 {{>hero default}}
-<h2 class="u-mt-32">Wider image minimum width</h2>
-<p>The layout will wrap at a wider container width.</p>
-{{>hero imageMinWider}}
-<h2 class="u-mt-32">Narrower content minimum width</h2>
-<p>The layout will wrap at a narrower container width.</p>
-{{>hero contentMinNarrower}}
-<h2 class="u-mt-32">Default with taller image</h2>
-{{>hero defaultTallerImage}}
-<h2 class="u-mt-32">Default without <code>imgSrc</code></h2>
-{{>hero defaultNoImage}}
-<h2 class="u-mt-32">Custom background color</h2>
+<h2 class="u-mt-32">Using <code>smallerImage</code></h2>
+{{>hero smallerImage}}
+<h2 class="u-mt-32">No <code>imageSrc</code></h2>
+{{>hero noImage}}
+<h2 class="u-mt-32">Custom color</h2>
 {{>hero customColor}}
+
