opt in to line truncation

--- a/toolkits/springer/packages/springer-listing/demo/index.hbs
+++ b/toolkits/springer/packages/springer-listing/demo/index.hbs
@@ -1,22 +1,22 @@
-<h2>With authors listed</h2>
+<h2>With authors listed and two-line truncation</h2>
 
 {{#with listingsWithAuthors}}
 	{{>listings}}
 {{/with}}
 
-<h2>Without authors and with three-line teasers</h2>
+<h2>Without authors and with three-line truncation</h2>
 
 {{#with listingsWithoutAuthors}}
 	{{>listings}}
 {{/with}}
 
-<h2>With options</h2>
+<h2>With options and no truncation</h2>
 
 {{#with listingsWithOptions}}
 	{{>listings}}
 {{/with}}
 
-<h3>With options and a heading level of 4</h3>
+<h3>With options, a heading level of 4, and no truncation</h3>
 
 {{#with listingsWithOptionsLevel4}}
 	{{>listings}}
