--- a/toolkits/global/packages/global-details/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-details/scss/10-settings/springer.scss
@@ -6,6 +6,7 @@ $details--border-width: 0;
 $details--padding: 0;
 $details--content-padding: spacing(16) 0 0 1.333em;
 $details--spacing: 1.5em;
+$details--icon-size: 1em;
 $details--focus-underline-color: color('action-focus');
 /* TODO: Move color to brand context */
 $details--title-color: #0070a8;
