--- a/toolkits/springer/packages/springer-header/view/springer-header.hbs
+++ b/toolkits/springer/packages/springer-header/view/springer-header.hbs
@@ -3,7 +3,7 @@
 		{{#with logo}}
 		<div class="c-header__brand">
 			<a href="{{href}}" itemprop="url">
-				<img alt="{{alt}}" itemprop="logo" width="112" height="30" role="img" src="{{srcUrl}}">
+				<img alt="{{alt}}" itemprop="logo" role="img" src="{{srcUrl}}">
 			</a>
 		</div>
 		{{/with}}
