--- a/context/brand-context/springer/scss/40-base/basic.scss
+++ b/context/brand-context/springer/scss/40-base/basic.scss
@@ -8,6 +8,10 @@ body {
 	line-height: 1.5;
 }
 
+* {
+	margin: 0;
+}
+
 a {
 	text-decoration: none;
 	color: #069;
@@ -56,27 +60,4 @@ img {
 button {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 	border-radius: 0;
-}
-
-/* accessible focus styles */
-
-h1:focus,
-h2:focus,
-h3:focus,
-h4:focus,
-h5:focus,
-p:focus,
-div:focus,
-ul:focus,
-ol:focus,
-li:focus,
-dl:focus,
-dt:focus,
-dd:focus,
-span:focus,
-i:focus,
-b:focus,
-em:focus,
-strong:focus {
-	outline: none;
 }
