Springer logo constrained height (#790)
* springer heading margins

* replace placeholders with mixins

* basic flow content spacing tightened

* further spacing algorithm tweaks

* constrained logo height

--- a/context/brand-context/springer/scss/30-mixins/typography.scss
+++ b/context/brand-context/springer/scss/30-mixins/typography.scss
@@ -20,7 +20,6 @@
 
 @mixin heading-base {
 	font-style: normal;
-	margin-bottom: 1em;
 	line-height: $context--line-height-tight;
 
 	a {
@@ -28,7 +27,7 @@
 	}
 }
 
-%u-h1 {
+@mixin u-h1 {
 	@include heading-base;
 	font-size: $context--font-size-h1;
 	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
@@ -36,7 +35,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-%u-h2 {
+@mixin u-h2 {
 	@include heading-base;
 	font-size: $context--font-size-h2;
 	font-size: unquote('min(max(#{$context--font-size-h2-min}, 3.5vw), #{$context--font-size-h2})');
@@ -44,7 +43,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-%u-h3 {
+@mixin u-h3 {
 	@include heading-base;
 	font-size: $context--font-size-h3;
 	font-size: unquote('min(max(#{$context--font-size-h3-min}, 3vw), #{$context--font-size-h3})');
@@ -52,7 +51,7 @@
 	font-weight: $context--font-weight-normal;
 }
 
-%u-h4 {
+@mixin u-h4 {
 	@include heading-base;
 	font-size: $context--font-size-h4;
 	font-size: unquote('min(max(#{$context--font-size-h4-min}, 2.5vw), #{$context--font-size-h4})');
@@ -60,11 +59,13 @@
 	font-weight: $context--font-weight-bold;
 }
 
-%u-h5 {
+@mixin u-h5 {
 	@include heading-base;
 	font-size: $context--font-size-h5;
 	font-size: unquote('min(max(#{$context--font-size-h5-min}, 2.5vw), #{$context--font-size-h5})');
 	font-family: $context--font-family-sans;
 	font-weight: $context--font-weight-bold;
 }
+
+
 
