restrict hyphenation to lang=de

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -77,6 +77,11 @@
 	letter-spacing: $card--title-letter-spacing;
 }
 
+[lang="de"] .c-card__title {
+	-webkit-hyphens: auto;
+	hyphens: auto;
+}
+
 .c-card__summary {
 	line-height: 1.4;
 
