--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -37,7 +37,7 @@
 													</select>
 												</div>
 												<div class="c-search__button-container">
-													<button type="submit" class="u-button u-button--primary u-button--full-width">Search</button>
+													<button type="submit" class="c-header__search-button">Search</button>
 												</div>
 											</div>
 										</form>
