remove utility class

--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -24,6 +24,7 @@
 .c-header__logo-container {
 	flex: 1 1 0;
 	margin-right: spacing(24);
+	margin-bottom: 0;
 	line-height: 0; // Can be an h1 or a div
 }
 
