--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -2,7 +2,7 @@
 	<div class="c-header__row">
 		<div class="c-header__container">
 			<div class="c-header__split">
-				<h1 class="c-header__logo-container u-mb-0">
+				<h1 class="c-header__logo-container">
 					<a href="/">
 						<picture class="c-header__logo">
 							<source srcset="https://media.springernature.com/full/nature-cms/uploads/product/nature/header-86f1267ea01eccd46b530284be10585e.svg" media="(min-width: 875px)">
