--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -18,43 +18,6 @@
 						<a class="c-header__link" href="#search-menu" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false"><span>Search</span><svg role="img" aria-hidden="true" focusable="false" height="22" width="22" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
 								<path d="M16.48 15.455c.283.282.29.749.007 1.032a.738.738 0 01-1.032-.007l-3.045-3.044a7 7 0 111.026-1.026zM8 14A6 6 0 108 2a6 6 0 000 12z"></path>
 							</svg></a>
-						<div id="search-menu" class="c-header__dropdown c-header-expander--tray u-hide-print">
-							<div class="c-header__container">
-								<h2 class="u-visually-hidden">Search</h2>
-								<div>
-									<div class="c-search c-search--max-width u-mb-16">
-										<form action="/search" method="get" role="search" autocomplete="off">
-											<label class="c-header__heading u-mb-8" for="keywords">Search articles by subject, keyword or author</label>
-											<div class="c-search__field">
-												<div class="c-search__input-container c-search__input-container--md">
-													<input type="text" required="" class="c-search__input" id="keywords" name="q" value="">
-												</div>
-												<div class="c-search__select-container">
-													<label for="results-from" class="u-visually-hidden">Show results from</label>
-													<select id="results-from" name="journal" class="c-search__select">
-														<option value="" selected="">All journals</option>
-														<option value="nature">This journal</option>
-													</select>
-												</div>
-												<div class="c-search__button-container">
-													<button type="submit" class="c-header__search-button">Search</button>
-												</div>
-											</div>
-										</form>
-									</div>
-								</div>
-								<div class="c-header-expander__keyline u-mb-16">
-									<p class="u-ma-0"><a href="/search/advanced">Advanced search</a></p>
-								</div>
-								<h3 class="c-header__heading">Quick links</h3>
-								<ul class="u-list-reset">
-									<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/subjects">Explore articles by subject</a></li>
-									<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/naturecareers">Find a job</a></li>
-									<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/authors/index.html">Guide to authors</a></li>
-									<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/authors/editorial_policies/">Editorial policies</a></li>
-								</ul>
-							</div>
-						</div>
 					</li>
 					<li class="c-header__item c-header__item--padding">
 						<a href="/nams/svc/myaccount" id="my-account" class="c-header__link placeholder" style="display: none;">
@@ -83,45 +46,6 @@
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
 							</a>
-							<nav class="u-hide-print c-header__dropdown" aria-labelledby="Explore-content" id="explore">
-								<div class="c-header__container">
-									<h2 id="Explore-content" class="c-header__heading u-js-hide">Explore content</h2>
-									<ul class="c-header__list">
-										{{#each exploreContent as |siteNavItem|}}
-										<li class="c-header__item">
-											<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
-										</li>
-										{{/each}}
-										{{#if facebookUri}}
-										<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
-											<a class="c-header__link" href="{{facebookUri}}">Follow us on Facebook</a>
-										</li>
-										{{/if}}
-										{{#if twitterUri}}
-										<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
-											<a class="c-header__link" href="{{twitterUri}}">Follow us on Twitter</a>
-										</li>
-										{{/if}}
-										{{#if showSubscribeButton}}
-										<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
-											<a class="c-header__link" href="https://www.nature.com/{{pcode}}/subscribe"><span>Subscribe</span></a>
-										</li>
-										{{/if}}
-										{{#if alertsLink}}
-										<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
-											<a class="c-header__link" href="{{alertsLink}}" rel="nofollow">Sign up for alerts<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
-													<path d="m4 10h2.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-3.08578644l-1.12132034 1.1213203c-.18753638.1875364-.29289322.4418903-.29289322.7071068v.1715729h14v-.1715729c0-.2652165-.1053568-.5195704-.2928932-.7071068l-1.7071068-1.7071067v-3.4142136c0-2.76142375-2.2385763-5-5-5-2.76142375 0-5 2.23857625-5 5zm3 4c0 1.1045695.8954305 2 2 2s2-.8954305 2-2zm-5 0c-.55228475 0-1-.4477153-1-1v-.1715729c0-.530433.21071368-1.0391408.58578644-1.4142135l1.41421356-1.4142136v-3c0-3.3137085 2.6862915-6 6-6s6 2.6862915 6 6v3l1.4142136 1.4142136c.3750727.3750727.5857864.8837805.5857864 1.4142135v.1715729c0 .5522847-.4477153 1-1 1h-4c0 1.6568542-1.3431458 3-3 3-1.65685425 0-3-1.3431458-3-3z" fill="#fff" />
-												</svg></a>
-										</li>
-										{{/if}}
-										{{#if rssLink}}
-										<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
-											<a class="c-header__link" href="{{rssLink}}"><span>RSS feed</span></a>
-										</li>
-										{{/if}}
-									</ul>
-								</div>
-							</nav>
 						</li>
 						<li class="c-header__item c-header__item--dropdown-menu">
 							<a href="#about-the-journal" class="c-header__link c-header__link--chevron" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false">
@@ -129,18 +53,6 @@
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
 							</a>
-							<nav class="u-hide-print c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
-								<div class="c-header__container">
-									<h2 id="About-the-journal" class="c-header__heading u-js-hide">About the journal</h2>
-									<ul class="c-header__list">
-										{{#each aboutJournalContent as |siteNavItem|}}
-										<li class="c-header__item">
-											<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
-										</li>
-										{{/each}}
-									</ul>
-								</div>
-							</nav>
 						</li>
 						<li class="c-header__item c-header__item--dropdown-menu u-mr-2">
 							<a href="#publish-with-us" class="c-header__link c-header__link--chevron c-header__link--dropdown-menu" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false">
@@ -148,26 +60,6 @@
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
 							</a>
-							<nav class="u-hide-print c-header__dropdown has-tethered" aria-labelledby="Publish-with-us-label" id="publish-with-us">
-								<div class="c-header__container">
-									<h2 id="Publish-with-us-label" class="c-header__heading u-js-hide">Publish with us</h2>
-									<ul class="c-header__list">
-										{{#each publishWithUsContent as |siteNavItem|}}
-										<li class="c-header__item">
-											<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
-										</li>
-										{{/each}}
-										{{#if submissionLink}}
-										<li class="c-header__item{{#if publishWithUs}} c-header__item--keyline{{/if}}">
-											<a class="c-header__link" href="{{submissionLink}}">Submit manuscript<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
-													<path d="m15 0c1.1045695 0 2 .8954305 2 2v5.5c0 .27614237-.2238576.5-.5.5s-.5-.22385763-.5-.5v-5.5c0-.51283584-.3860402-.93550716-.8833789-.99327227l-.1166211-.00672773h-9v3c0 1.1045695-.8954305 2-2 2h-3v10c0 .5128358.38604019.9355072.88337887.9932723l.11662113.0067277h7.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-7.5c-1.1045695 0-2-.8954305-2-2v-10.17157288c0-.53043297.21071368-1.0391408.58578644-1.41421356l3.82842712-3.82842712c.37507276-.37507276.88378059-.58578644 1.41421356-.58578644zm-.5442863 8.18867991 3.3545404 3.35454039c.2508994.2508994.2538696.6596433.0035959.909917-.2429543.2429542-.6561449.2462671-.9065387-.0089489l-2.2609825-2.3045251.0010427 7.2231989c0 .3569916-.2898381.6371378-.6473715.6371378-.3470771 0-.6473715-.2852563-.6473715-.6371378l-.0010428-7.2231995-2.2611222 2.3046654c-.2531661.2580415-.6562868.2592444-.9065605.0089707-.24295423-.2429542-.24865597-.6576651.0036132-.9099343l3.3546673-3.35466731c.2509089-.25090888.6612706-.25227691.9135302-.00001728zm-.9557137-3.18867991c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5zm-8.5-3.587-3.587 3.587h2.587c.55228475 0 1-.44771525 1-1zm8.5 1.587c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5z" fill="#fff" />
-												</svg>
-											</a>
-										</li>
-										{{/if}}
-									</ul>
-								</div>
-							</nav>
 						</li>
 					</ul>
 					<div class="c-header__menu u-ml-16 u-show-lg u-hide u-show-at-lg">
@@ -196,3 +88,117 @@
 		</div>
 	</div>
 </header>
+
+{{! These sections should get added at the end of the body so nav links anchor bottom of the page when no js }}
+
+<div id="search-menu" class="c-header__dropdown c-header-expander--tray u-hide-print">
+	<div class="c-header__container">
+		<h2 class="u-visually-hidden">Search</h2>
+		<div>
+			<div class="c-search c-search--max-width u-mb-16">
+				<form action="/search" method="get" role="search" autocomplete="off">
+					<label class="c-header__heading u-mb-8" for="keywords">Search articles by subject, keyword or author</label>
+					<div class="c-search__field">
+						<div class="c-search__input-container c-search__input-container--md">
+							<input type="text" required="" class="c-search__input" id="keywords" name="q" value="">
+						</div>
+						<div class="c-search__select-container">
+							<label for="results-from" class="u-visually-hidden">Show results from</label>
+							<select id="results-from" name="journal" class="c-search__select">
+								<option value="" selected="">All journals</option>
+								<option value="nature">This journal</option>
+							</select>
+						</div>
+						<div class="c-search__button-container">
+							<button type="submit" class="c-header__search-button">Search</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<div class="c-header-expander__keyline u-mb-16">
+			<p class="u-ma-0"><a href="/search/advanced">Advanced search</a></p>
+		</div>
+		<h3 class="c-header__heading">Quick links</h3>
+		<ul class="u-list-reset">
+			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/subjects">Explore articles by subject</a></li>
+			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/naturecareers">Find a job</a></li>
+			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/authors/index.html">Guide to authors</a></li>
+			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/authors/editorial_policies/">Editorial policies</a></li>
+		</ul>
+	</div>
+</div>
+
+<nav class="u-hide-print c-header__dropdown" aria-labelledby="Explore-content" id="explore">
+	<div class="c-header__container">
+		<h2 id="Explore-content" class="c-header__heading u-js-hide">Explore content</h2>
+		<ul class="c-header__list">
+			{{#each exploreContent as |siteNavItem|}}
+				<li class="c-header__item">
+					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
+				</li>
+			{{/each}}
+			{{#if facebookUri}}
+				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
+					<a class="c-header__link" href="{{facebookUri}}">Follow us on Facebook</a>
+				</li>
+			{{/if}}
+			{{#if twitterUri}}
+				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}}">
+					<a class="c-header__link" href="{{twitterUri}}">Follow us on Twitter</a>
+				</li>
+			{{/if}}
+			{{#if showSubscribeButton}}
+				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
+					<a class="c-header__link" href="https://www.nature.com/{{pcode}}/subscribe"><span>Subscribe</span></a>
+				</li>
+			{{/if}}
+			{{#if alertsLink}}
+				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
+					<a class="c-header__link" href="{{alertsLink}}" rel="nofollow">Sign up for alerts<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
+						<path d="m4 10h2.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-3.08578644l-1.12132034 1.1213203c-.18753638.1875364-.29289322.4418903-.29289322.7071068v.1715729h14v-.1715729c0-.2652165-.1053568-.5195704-.2928932-.7071068l-1.7071068-1.7071067v-3.4142136c0-2.76142375-2.2385763-5-5-5-2.76142375 0-5 2.23857625-5 5zm3 4c0 1.1045695.8954305 2 2 2s2-.8954305 2-2zm-5 0c-.55228475 0-1-.4477153-1-1v-.1715729c0-.530433.21071368-1.0391408.58578644-1.4142135l1.41421356-1.4142136v-3c0-3.3137085 2.6862915-6 6-6s6 2.6862915 6 6v3l1.4142136 1.4142136c.3750727.3750727.5857864.8837805.5857864 1.4142135v.1715729c0 .5522847-.4477153 1-1 1h-4c0 1.6568542-1.3431458 3-3 3-1.65685425 0-3-1.3431458-3-3z" fill="#fff" />
+					</svg></a>
+				</li>
+			{{/if}}
+			{{#if rssLink}}
+				<li class="c-header__item{{#if exploreContent}} c-header__item--keyline c-header__item--keyline-first-item-only{{/if}} u-hide-at-lg">
+					<a class="c-header__link" href="{{rssLink}}"><span>RSS feed</span></a>
+				</li>
+			{{/if}}
+		</ul>
+	</div>
+</nav>
+
+<nav class="u-hide-print c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
+	<div class="c-header__container">
+		<h2 id="About-the-journal" class="c-header__heading u-js-hide">About the journal</h2>
+		<ul class="c-header__list">
+			{{#each aboutJournalContent as |siteNavItem|}}
+				<li class="c-header__item">
+					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
+				</li>
+			{{/each}}
+		</ul>
+	</div>
+</nav>
+
+<nav class="u-hide-print c-header__dropdown" aria-labelledby="Publish-with-us-label" id="publish-with-us">
+	<div class="c-header__container">
+		<h2 id="Publish-with-us-label" class="c-header__heading u-js-hide">Publish with us</h2>
+		<ul class="c-header__list">
+			{{#each publishWithUsContent as |siteNavItem|}}
+				<li class="c-header__item">
+					<a class="c-header__link" href="{{siteNavItem.slug}}">{{siteNavItem.text}}</a>
+				</li>
+			{{/each}}
+			{{#if submissionLink}}
+				<li class="c-header__item{{#if publishWithUs}} c-header__item--keyline{{/if}}">
+					<a class="c-header__link" href="{{submissionLink}}">Submit manuscript<svg role="img" aria-hidden="true" focusable="false" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
+						<path d="m15 0c1.1045695 0 2 .8954305 2 2v5.5c0 .27614237-.2238576.5-.5.5s-.5-.22385763-.5-.5v-5.5c0-.51283584-.3860402-.93550716-.8833789-.99327227l-.1166211-.00672773h-9v3c0 1.1045695-.8954305 2-2 2h-3v10c0 .5128358.38604019.9355072.88337887.9932723l.11662113.0067277h7.5c.27614237 0 .5.2238576.5.5s-.22385763.5-.5.5h-7.5c-1.1045695 0-2-.8954305-2-2v-10.17157288c0-.53043297.21071368-1.0391408.58578644-1.41421356l3.82842712-3.82842712c.37507276-.37507276.88378059-.58578644 1.41421356-.58578644zm-.5442863 8.18867991 3.3545404 3.35454039c.2508994.2508994.2538696.6596433.0035959.909917-.2429543.2429542-.6561449.2462671-.9065387-.0089489l-2.2609825-2.3045251.0010427 7.2231989c0 .3569916-.2898381.6371378-.6473715.6371378-.3470771 0-.6473715-.2852563-.6473715-.6371378l-.0010428-7.2231995-2.2611222 2.3046654c-.2531661.2580415-.6562868.2592444-.9065605.0089707-.24295423-.2429542-.24865597-.6576651.0036132-.9099343l3.3546673-3.35466731c.2509089-.25090888.6612706-.25227691.9135302-.00001728zm-.9557137-3.18867991c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5zm-8.5-3.587-3.587 3.587h2.587c.55228475 0 1-.44771525 1-1zm8.5 1.587c.2761424 0 .5.22385763.5.5s-.2238576.5-.5.5h-6c-.27614237 0-.5-.22385763-.5-.5s.22385763-.5.5-.5z" fill="#fff" />
+					</svg>
+					</a>
+				</li>
+			{{/if}}
+		</ul>
+	</div>
+</nav>
