remove attributes that get added by js in template

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -15,7 +15,7 @@
 						<a class="c-header__link" href="https://www.nature.com/siteindex"><span>View all journals</span></a>
 					</li>
 					<li class="c-header__item c-header__item--padding c-header__item--pipe">
-						<a class="c-header__link" href="#search-menu" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false"><span>Search</span><svg role="img" aria-hidden="true" focusable="false" height="22" width="22" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+						<a class="c-header__link" href="#search-menu" data-header-expander><span>Search</span><svg role="img" aria-hidden="true" focusable="false" height="22" width="22" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
 								<path d="M16.48 15.455c.283.282.29.749.007 1.032a.738.738 0 01-1.032-.007l-3.045-3.044a7 7 0 111.026-1.026zM8 14A6 6 0 108 2a6 6 0 000 12z"></path>
 							</svg></a>
 					</li>
@@ -41,21 +41,21 @@
 				<div class="c-header__split">
 					<ul class="c-header__menu c-header__menu--journal">
 						<li class="c-header__item c-header__item--dropdown-menu">
-							<a href="#explore" class="c-header__link c-header__link--chevron" data-header-expander role="button" aria-haspopup="true" aria-expanded="false">
+							<a href="#explore" class="c-header__link c-header__link--chevron" data-header-expander>
 								<span><span class="c-header__show-text">Explore</span> content</span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
 							</a>
 						</li>
 						<li class="c-header__item c-header__item--dropdown-menu">
-							<a href="#about-the-journal" class="c-header__link c-header__link--chevron" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false">
+							<a href="#about-the-journal" class="c-header__link c-header__link--chevron" data-header-expander>
 								<span>About <span class="c-header__show-text">the journal</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
 							</a>
 						</li>
 						<li class="c-header__item c-header__item--dropdown-menu u-mr-2">
-							<a href="#publish-with-us" class="c-header__link c-header__link--chevron c-header__link--dropdown-menu" data-header-expander="" role="button" aria-haspopup="true" aria-expanded="false">
+							<a href="#publish-with-us" class="c-header__link c-header__link--chevron c-header__link--dropdown-menu" data-header-expander>
 								<span>Publish <span class="c-header__show-text">with us</span></span><svg role="img" aria-hidden="true" focusable="false" height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg">
 									<path d="m5.58578644 3-3.29289322-3.29289322c-.39052429-.39052429-.39052429-1.02368927 0-1.41421356s1.02368927-.39052429 1.41421356 0l4 4c.39052429.39052429.39052429 1.02368927 0 1.41421356l-4 4c-.39052429.39052429-1.02368927.39052429-1.41421356 0s-.39052429-1.02368927 0-1.41421356z" transform="matrix(0 1 -1 0 11 3)"></path>
 								</svg>
