fix incorrect value on data-header attribute

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -1,4 +1,4 @@
-<header class="c-header" id="header" data-header=nature-150-split-header" style="border-color:#000">
+<header class="c-header" id="header" data-header style="border-color:#000">
 	<div class="c-header__row">
 		<div class="c-header__container">
 			<div class="c-header__split">
