update class name

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -91,7 +91,7 @@
 
 {{! These sections should get added at the end of the body so nav links anchor bottom of the page when no js }}
 
-<div id="search-menu" class="c-header__dropdown c-header-expander--tray u-hide-print">
+<div id="search-menu" class="c-header__dropdown c-header__tray u-hide-print">
 	<div class="c-header__container">
 		<h2 class="u-visually-hidden">Search</h2>
 		<div>
