use u-keyline mixin for keyline styles add c-header__heading--keyline to replace c-header-expander__keyline

--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -116,10 +116,10 @@
 				</form>
 			</div>
 		</div>
-		<div class="c-header-expander__keyline u-mb-16">
-			<p class="u-ma-0"><a href="/search/advanced">Advanced search</a></p>
-		</div>
-		<h3 class="c-header__heading">Quick links</h3>
+
+		<p class="u-ma-0"><a class="c-header__link" href="/search/advanced">Advanced search</a></p>
+
+		<h3 class="c-header__heading c-header__heading--keyline">Quick links</h3>
 		<ul class="u-list-reset">
 			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/subjects">Explore articles by subject</a></li>
 			<li class="u-display-inline-block u-mr-24"><a class="c-header__link" href="/naturecareers">Find a job</a></li>
