--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -120,7 +120,7 @@
 .c-header__link {
 	@include u-link-inherit();
 	padding: spacing(8);
-	display: flex;
+	display: inline-flex;
 	align-items: center;
 	white-space: nowrap;
 
@@ -171,6 +171,11 @@
 	font-family: $context--font-family-sans;
 	font-weight: $context--font-weight-normal;
 	margin-bottom: spacing(8);
+}
+
+.c-header__heading--keyline {
+	@include u-keyline($direction: top);
+	width: 100%;
 }
 
 .c-header__list {
@@ -245,14 +250,13 @@
 	}
 
 	.c-header__item--keyline {
-		border-top: 1px solid white;
-		padding-top: spacing(8);
-		margin-top: spacing(8);
+		@include u-keyline($direction: top, $spacing: spacing(8));
 	}
 
 	.c-header__item--keyline-first-item-only ~ .c-header__item--keyline-first-item-only {
 		border-top: none;
 		padding-top: 0;
+		margin-top: 0;
 	}
 }
 
