--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -61,7 +61,6 @@
 								</svg>
 							</a>
 						</li>
-
 						<li class="c-header__item c-header__item--pipe c-header__item--hide-lg-max">
 							<a class="c-header__link" href="https://www.nature.com/nature/subscribe">
 								<span>Subscribe</span>
@@ -90,7 +89,7 @@
 
 {{! These sections should get added at the end of the body so nav links anchor bottom of the page when no js }}
 
-<div id="search-menu" class="c-header__dropdown c-header__tray u-hide-print">
+<div id="search-menu" class="c-header__dropdown c-header__tray">
 	<div class="c-header__container">
 		<h2 class="u-visually-hidden">Search</h2>
 		<div>
@@ -128,7 +127,7 @@
 	</div>
 </div>
 
-<nav class="u-hide-print c-header__dropdown" aria-labelledby="Explore-content" id="explore">
+<nav class="c-header__dropdown" aria-labelledby="Explore-content" id="explore">
 	<div class="c-header__container">
 		<h2 id="Explore-content" class="c-header__heading u-js-hide">Explore content</h2>
 		<ul class="c-header__list">
@@ -168,7 +167,7 @@
 	</div>
 </nav>
 
-<nav class="u-hide-print c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
+<nav class="c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
 	<div class="c-header__container">
 		<h2 id="About-the-journal" class="c-header__heading u-js-hide">About the journal</h2>
 		<ul class="c-header__list">
@@ -181,7 +180,7 @@
 	</div>
 </nav>
 
-<nav class="u-hide-print c-header__dropdown" aria-labelledby="Publish-with-us-label" id="publish-with-us">
+<nav class="c-header__dropdown" aria-labelledby="Publish-with-us-label" id="publish-with-us">
 	<div class="c-header__container">
 		<h2 id="Publish-with-us-label" class="c-header__heading u-js-hide">Publish with us</h2>
 		<ul class="c-header__list">
