replace utility classes

--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -241,6 +241,10 @@
 		min-width: 225px;
 	}
 
+	.c-header__heading--hide {
+		@include u-hide;
+	}
+
 	.c-header__list {
 		flex-direction: column;
 	}
