--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -129,7 +129,7 @@
 
 <nav class="c-header__dropdown" aria-labelledby="Explore-content" id="explore">
 	<div class="c-header__container">
-		<h2 id="Explore-content" class="c-header__heading u-js-hide">Explore content</h2>
+		<h2 id="Explore-content" class="c-header__heading c-header__heading--hide">Explore content</h2>
 		<ul class="c-header__list">
 			{{#each exploreContent as |siteNavItem|}}
 				<li class="c-header__item">
@@ -169,7 +169,7 @@
 
 <nav class="c-header__dropdown" aria-labelledby="About-the-journal" id="about-the-journal">
 	<div class="c-header__container">
-		<h2 id="About-the-journal" class="c-header__heading u-js-hide">About the journal</h2>
+		<h2 id="About-the-journal" class="c-header__heading c-header__heading--hide">About the journal</h2>
 		<ul class="c-header__list">
 			{{#each aboutJournalContent as |siteNavItem|}}
 				<li class="c-header__item">
@@ -182,7 +182,7 @@
 
 <nav class="c-header__dropdown" aria-labelledby="Publish-with-us-label" id="publish-with-us">
 	<div class="c-header__container">
-		<h2 id="Publish-with-us-label" class="c-header__heading u-js-hide">Publish with us</h2>
+		<h2 id="Publish-with-us-label" class="c-header__heading c-header__heading--hide">Publish with us</h2>
 		<ul class="c-header__list">
 			{{#each publishWithUsContent as |siteNavItem|}}
 				<li class="c-header__item">
