--- a/toolkits/nature/packages/nature-header/scss/50-components/header.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header.scss
@@ -265,7 +265,7 @@
 	}
 }
 
-.c-header__tray.has-tethered {
+.c-header__dropdown--full-width.has-tethered {
 	width: 100%;
 	padding: spacing(32) 0 spacing(24);
 	transform: none;
