--- a/toolkits/nature/packages/nature-header/view/header.hbs
+++ b/toolkits/nature/packages/nature-header/view/header.hbs
@@ -89,7 +89,7 @@
 
 {{! These sections should get added at the end of the body so nav links anchor bottom of the page when no js }}
 
-<div id="search-menu" class="c-header__dropdown c-header__tray">
+<div id="search-menu" class="c-header__dropdown c-header__dropdown--full-width">
 	<div class="c-header__container">
 		<h2 class="u-visually-hidden">Search</h2>
 		<div>
